# BotDoc

./: 404.html  index.html  pyproject.toml  sitemap.xml
CMDocs/: mkdocs.yml
CMDocs/docs/: about.md  index.md  v3.md
about/: index.html
docs/: index.md  terms.md  v1.md  v2.md
search/: search_index.json
terms/: index.html
v1/: index.html
v2/: index.html
v3/: index.html
