[project]
name = "mkdocs-cmbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cairosvg>=2.8.2",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.16",
    "pillow>=11.3.0",
]

[[tool.uv.index]]
url = "http://mirrors.aliyun.com/pypi/simple/"
default = true
